--- a/requirements.txt
+++ b/requirements.txt
@@ -15,18 +15,18 @@ MarkupSafe==3.0.2
 mpmath==1.3.0
 networkx==3.4.2
 numpy==2.1.3
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
+# nvidia-cublas-cu12==12.4.5.8
+# nvidia-cuda-cupti-cu12==12.4.127
+# nvidia-cuda-nvrtc-cu12==12.4.127
+# nvidia-cuda-runtime-cu12==12.4.127
+# nvidia-cudnn-cu12==9.1.0.70
+# nvidia-cufft-cu12==11.2.1.3
+# nvidia-curand-cu12==10.3.5.147
+# nvidia-cusolver-cu12==11.6.1.9
+# nvidia-cusparse-cu12==12.3.1.170
+# nvidia-nccl-cu12==2.21.5
+# nvidia-nvjitlink-cu12==12.4.127
+# nvidia-nvtx-cu12==12.4.127
 opencv-python==4.10.0.84
 packaging==24.1
 pillow==11.0.0
